--- a/Dockerfile.mysql
+++ b/Dockerfile.mysql
@@ -1,8 +1,8 @@
 # Use the official MySQL image
-FROM mysql:8.0
+FROM mysql:latest
 
 # Copy the SQL dump file
-COPY Java\ files/sql-file.sql /docker-entrypoint-initdb.d/
+COPY JavaFiles/sql-file.sql /docker-entrypoint-initdb.d/
 
 # Set environment variables for MySQL
 ENV MYSQL_ROOT_PASSWORD=rootpassword
