--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,30 @@ on:
       - main
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.1.7
+
+      - name: Terraform Init and Apply for S3 and DynamoDB
+        run: |
+          cd terraform
+          terraform init
+          terraform apply -target=aws_s3_bucket.terraform_state -target=aws_s3_bucket_versioning.terraform_state_versioning -target=aws_dynamodb_table.terraform_locks -auto-approve
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
   build:
     runs-on: ubuntu-latest
+    needs: setup
 
     steps:
       - name: Checkout repository
@@ -34,6 +56,7 @@ jobs:
 
   terraform:
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Checkout repository
@@ -45,17 +68,17 @@ jobs:
           terraform_version: 1.1.7
 
       - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: |
+          cd terraform
+          terraform init
+          terraform apply -auto-approve
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [build, terraform]
+    needs: [terraform]
 
     steps:
       - name: Deploy Java app and MySQL with Docker Compose
@@ -93,7 +116,9 @@ jobs:
           terraform_version: 1.1.7
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve
+        run: |
+          cd terraform
+          terraform destroy -auto-approve
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
