--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Update apt-get
+        run: sudo apt-get update
+
       - name: Install AWS CLI
-        run: sudo apt-get install -y awscli
+        run: sudo apt-get install -y awscli --fix-missing
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
